# cockpit

./: .conda_env.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  setup.cfg
.github/workflows/: lint.yaml  test.yaml
cockpit/: cockpit.py  context.py
cockpit/instruments/: alpha_gauge.py
cockpit/quantities/: grad_hist.py  utils_transforms.py
cockpit/quantities/hooks/: base.py
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/_static/: instrument_preview_run_secondary.json
docs/source/examples/: 01_basic_fmnist.rst  02_advanced_fmnist.rst  03_deepobs.rst
experiments/: README.md
experiments/09_layerwise/: plot.py
experiments/11_histogram2d/: plot.py
tests/: requirements.txt
